--- a/motion.conf
+++ b/motion.conf
@@ -8,5 +8,5 @@ output_normal off
 #height 480
 #width 352
 #height 320
-#on_event_start ./capture_service start
-#on_event_end ./capture_service stop
+#on_event_start ./timelapse_service.py start
+#on_event_end ./timelapse_service.py stop
