adjusted settings and syslog the timelapse_service calls

--- a/motion.conf
+++ b/motion.conf
@@ -1,12 +1,17 @@
 webcam_port 8080
 webcam_localhost off
-control_port 8181
+control_port 8081
 control_localhost off
 control_html_output on
 output_normal off
-#width 640
-#height 480
-#width 352
-#height 320
+lightswitch 50
+width 320
+height 240
+framerate 5
+threshold 4500
+quality 50
+webcam_quality 25
+webcam_maxrate 5
+
 on_event_start /home/pi/src/timelapse/timelapse_service.py start
 on_event_end /home/pi/src/timelapse/timelapse_service.py stop
