write a status file on exit, status cli argument for checking service state

--- a/motion.conf
+++ b/motion.conf
@@ -7,6 +7,7 @@ output_normal off
 lightswitch 50
 width 320
 height 240
+#v4l2_palette 2
 framerate 5
 threshold 4500
 quality 50
@@ -15,3 +16,5 @@ webcam_maxrate 5
 
 on_event_start /home/pi/src/timelapse/timelapse_service.py start
 on_event_end /home/pi/src/timelapse/timelapse_service.py stop
+on_camera_lost /home/pi/src/timelapse/timelapse_service.py stop
+ 
