trigger the timelapse on every movement, this will cause some noise in logs but wlll prevent loss of time when the service dies for some reason inside a long event

--- a/motion.conf
+++ b/motion.conf
@@ -8,6 +8,7 @@ lightswitch 50
 width 320
 height 240
 #v4l2_palette 2
+#v4l2_palette 3
 framerate 5
 threshold 4500
 quality 50
@@ -17,4 +18,5 @@ webcam_maxrate 5
 on_event_start /home/pi/src/timelapse/timelapse_service.py start
 on_event_end /home/pi/src/timelapse/timelapse_service.py stop
 on_camera_lost /home/pi/src/timelapse/timelapse_service.py stop
- 
+# Just in case the timelapse service dies within a long event
+on_motion_detected  /home/pi/src/timelapse/timelapse_service.py start
