--- a/motion.conf
+++ b/motion.conf
@@ -19,4 +19,4 @@ on_event_start /home/pi/src/timelapse/timelapse_service.py start
 on_event_end /home/pi/src/timelapse/timelapse_service.py stop
 on_camera_lost /home/pi/src/timelapse/timelapse_service.py stop
 # Just in case the timelapse service dies within a long event
-on_motion_detected  /home/pi/src/timelapse/timelapse_service.py start
+on_motion_detected  /home/pi/src/timelapse/timelapse_service.py start silent
